# datascript-ocaml

./: .gitignore  AGENTS.md  README.md  agents.md  datascript_ocaml.opam  dune-project  logseq_queries.edn  logseq_runtime_inputs.edn
.github/workflows/: ci.yml
bench/: bench_ocaml.ml  bench_output_test.sh  bench_upstream.js  dune  memory_ocaml.ml  memory_ocaml_js.ml  memory_scenario.ml  memory_upstream.js  outliner_insert_ocaml.ml  outliner_insert_upstream.js  persistent_sqlite.ml  query_profile.ml
docs/: compatibility.md  design.md  perf.md  query_planner.md  type-improvements.md  upstream_differences.md
docs/fixs/: dynamic-attribute-keyword-joins.md  find-parser-error-message.md  identity-collection-output-rules.md  logseq-has-property-empty-rule-shortcuts.md  logseq-input-arity-error-message.md  logseq-ref-property-malformed-lookup-fast-error.md  logseq-runtime-rules-inputs.md  logseq-source-missing-wildcard-pull-performance.md  logseq-tag-value-not-attr-performance.md  logseq-tag-value-present-attr-performance.md  logseq-tagged-page-ref-join-performance.md  logseq-wildcard-pull-map-scalar-tie.md  malformed-lookup-ref-entity-values.md  rule-prefix-relation-performance.md  rule-relation-lookup-key-normalization.md
examples/: dune  logseq_query_runner.ml  logseq_sqlite_storage.ml  logseq_transit.ml  sqlite_storage_example.ml
impl/: built_ins.ml  built_ins.mli  conn.ml  conn.mli  data_readers.ml  data_readers.mli  datascript.ml  datascript.mli  db.ml  db.mli  db_access.ml  dune  entity.ml  entity.mli  entity_refs.ml  lookup_refs.ml  lookup_refs.mli  lru.ml  lru.mli  parser.ml  parser.mli  pull_api.ml  pull_api.mli  pull_parser.ml  pull_parser.mli  query.ml  query.mli  query_api.ml  query_eval.ml  query_runtime.ml  query_where.ml  schema.ml  schema.mli  schema_access.ml  serialize.ml  serialize.mli  storage.ml  storage.mli  transact.ml  transact.mli  (+5 more)
js/: datascript_js.ml  dune
melange/: datascript_melange_storage.ml  dune
persistent-sorted-set-ocaml/: dune-project  lib
script/: benchmark_vs_cljs.sh  compare_logseq_queries.clj  cross_runtime_parity.sh  cross_runtime_upstream.js  diff_upstream_tests.sh  ensure_upstream_datascript.sh  extract_logseq_queries.clj  extract_logseq_runtime_inputs.clj  memory_benchmark_vs_cljs.sh  outliner_insert_benchmark_vs_cljs.sh  test.sh  test_logseq_query_filters.clj  upstream_query_worker.clj
script/cross_runtime/: upstream_fuzz.cljs
sqlite/: datascript_sqlite.ml  datascript_sqlite_codec.ml  datascript_sqlite_stubs.c  dune
test/: cross_runtime_ocaml.ml  cross_runtime_parity_test.sh  dune  js_facade_runner.js  js_smoke.ml  logseq_queries.edn  sqlite_cross_runtime_native.ml  sqlite_cross_runtime_parity.js  test_built_ins.ml  test_conn.ml  test_core.ml  test_data_readers.ml  test_datascript.ml  test_db.ml  test_entity.ml  test_issues.ml  test_listen.ml  test_logseq_query_parity.ml  test_logseq_query_planners.ml  test_lookup_refs.ml  test_lru.ml  test_melange_transit_backend.ml  test_parser.ml  test_parser_find.ml  test_parser_query.ml  test_parser_return_map.ml  test_parser_rules.ml  test_parser_where.ml  test_perf.ml  test_pull_api.ml  test_pull_parser.ml  test_query_namespace.ml  test_query_pull.ml  test_serialize.ml  test_sqlite_package.ml  test_sqlite_storage.ml  test_storage.ml  test_tuples.ml  test_upsert.ml  test_util.ml  (+1 more)
type/: datascript_types.ml  datascript_types.mli  dune
