opam-version: "2.0"
synopsis: "An OCaml 5 rewrite of DataScript"
description: "A top-down OCaml 5 rewrite of DataScript."
maintainer: "rcmerci"
authors: ["rcmerci"]
license: "MIT"
depends: [
  "ocaml" {>= "5.2.1"}
  "dune" {>= "3.17"}
  "persistent_sorted_set_ocaml" {= "dev"}
  "sqlite3"
  "melange"
  "melange-edn" {= "0.5.0"}
  "melange-transit" {= "dev"}
  "js_of_ocaml" {with-test}
  "js_of_ocaml-compiler" {with-test}
  "yojson" {with-test}
]
pin-depends: [
  ["persistent_sorted_set_ocaml.dev" "git+https://github.com/logseq/persistent-sorted-set-ocaml.git#cc41a1928beb2b4a368b00bfe9cf1d30dba94f1a"]
  ["melange-transit.dev" "git+https://github.com/RCmerci/melange-transit.git#f8388857a1e2c8d53b00dc968ad7bb333be882c3"]
  ["melange-edn.0.5.0" "git+https://github.com/RCmerci/melange-edn.git#bdc79c1d1d6edc9b0874113759bee29ce45f53f5"]
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
