opam-version: "2.0"
synopsis: "An OCaml 5 rewrite of DataScript"
description: "A top-down OCaml 5 rewrite of DataScript."
maintainer: "rcmerci"
authors: ["rcmerci"]
license: "MIT"
depends: [
  "ocaml" {>= "5.2.1"}
  "dune" {>= "3.17"}
  "persistent_sorted_set_ocaml" {= "dev"}
  "sqlite3"
  "melange"
  "melange-edn-core" {= "0.5.0"}
  "melange-edn-native" {= "0.5.0" & with-test}
  "melange-edn-melange" {= "0.5.0"}
  "melange-transit-core" {= "0.1.0"}
  "melange-transit-native" {= "0.1.0"}
  "melange-transit-melange" {= "0.1.0"}
  "js_of_ocaml" {with-test}
  "js_of_ocaml-compiler" {with-test}
  "yojson" {with-test}
]
pin-depends: [
  ["persistent_sorted_set_ocaml.dev" "git+https://github.com/logseq/persistent-sorted-set-ocaml.git#2920b0034dec7678e218e1b203c57a9f57220708"]
  ["melange-edn-core.0.5.0" "git+https://github.com/RCmerci/melange-edn.git#main"]
  ["melange-edn-native.0.5.0" "git+https://github.com/RCmerci/melange-edn.git#main"]
  ["melange-edn-melange.0.5.0" "git+https://github.com/RCmerci/melange-edn.git#main"]
  ["melange-transit-core.0.1.0" "git+https://github.com/RCmerci/melange-transit.git#main"]
  ["melange-transit-native.0.1.0" "git+https://github.com/RCmerci/melange-transit.git#main"]
  ["melange-transit-melange.0.1.0" "git+https://github.com/RCmerci/melange-transit.git#main"]
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
