(executable
 (name bench_ocaml)
 (modules bench_ocaml)
 (modes exe js)
 (libraries datascript unix))

(executable
 (name query_profile)
 (modules query_profile)
 (modes exe js)
 (libraries datascript unix))

(library
 (name memory_bench_common)
 (modules memory_scenario)
 (libraries datascript))

(executable
 (name memory_ocaml)
 (modules memory_ocaml)
 (modes exe)
 (libraries memory_bench_common unix))

(executable
 (name memory_ocaml_js)
 (modules memory_ocaml_js)
 (modes js)
 (libraries memory_bench_common js_of_ocaml))

(executable
 (name persistent_sqlite)
 (modules persistent_sqlite)
 (modes exe)
 (libraries datascript datascript_sqlite unix sqlite3))

(executable
 (name outliner_insert_ocaml)
 (modules outliner_insert_ocaml)
 (modes exe js)
 (libraries datascript unix))

(rule
 (alias bench)
 (deps
  bench_ocaml.exe
  bench_ocaml.bc.js
  memory_ocaml.exe
  memory_ocaml_js.bc.js
  bench_upstream.js
  memory_upstream.js
  ../script/benchmark_vs_cljs.sh)
 (action
  (setenv
   BENCH_SKIP_BUILD
   1
   (run bash %{dep:../script/benchmark_vs_cljs.sh}))))

(rule
 (alias runtest)
 (deps
  bench_ocaml.exe
  bench_output_test.sh)
 (action
  (run bash %{dep:bench_output_test.sh} %{dep:bench_ocaml.exe})))
