(test
 (name test_datascript)
 (modules test_datascript)
 (libraries datascript unix))

(test
 (name test_lru)
 (modules test_lru)
 (libraries datascript))

(test
 (name test_conn)
 (modules test_conn)
 (libraries datascript))

(test
 (name test_core)
 (modules test_core)
 (libraries datascript))

(test
 (name test_db)
 (modules test_db)
 (libraries datascript))

(test
 (name test_issues)
 (modules test_issues)
 (libraries datascript))

(test
 (name test_entity)
 (modules test_entity)
 (libraries datascript))

(test
 (name test_listen)
 (modules test_listen)
 (libraries datascript))

(test
 (name test_lookup_refs)
 (modules test_lookup_refs)
 (libraries datascript))

(test
 (name test_serialize)
 (modules test_serialize)
 (libraries datascript))

(test
 (name test_sqlite_storage)
 (modules test_sqlite_storage)
 (libraries datascript logseq_sqlite_storage unix))

(test
 (name test_storage)
 (modules test_storage)
 (libraries datascript unix))

(test
 (name test_upsert)
 (modules test_upsert)
 (libraries datascript))

(test
 (name test_util)
 (modules test_util)
 (libraries datascript))

(executable
 (name js_smoke)
 (modes js)
 (modules js_smoke)
 (libraries datascript))

(rule
 (alias runtest)
 (deps js_smoke.bc.js)
 (action
  (run node %{dep:js_smoke.bc.js})))
