(test
 (name test_datascript)
 (modules test_datascript)
 (libraries datascript unix))

(test
 (name test_lru)
 (modules test_lru)
 (libraries datascript))

(test
 (name test_conn)
 (modules test_conn)
 (libraries datascript))

(test
 (name test_core)
 (modules test_core)
 (libraries datascript))

(test
 (name test_db)
 (modules test_db)
 (libraries datascript))

(test
 (name test_data_readers)
 (modules test_data_readers)
 (libraries datascript))

(test
 (name test_built_ins)
 (modules test_built_ins)
 (libraries datascript))

(test
 (name test_issues)
 (modules test_issues)
 (libraries datascript))

(test
 (name test_entity)
 (modules test_entity)
 (libraries datascript))

(test
 (name test_listen)
 (modules test_listen)
 (libraries datascript))

(test
 (name test_lookup_refs)
 (modules test_lookup_refs)
 (libraries datascript))

(test
 (name test_parser)
 (modules test_parser)
 (libraries datascript))

(test
 (name test_parser_find)
 (modules test_parser_find)
 (libraries datascript))

(test
 (name test_parser_query)
 (modules test_parser_query)
 (libraries datascript))

(test
 (name test_parser_return_map)
 (modules test_parser_return_map)
 (libraries datascript))

(test
 (name test_parser_rules)
 (modules test_parser_rules)
 (libraries datascript))

(test
 (name test_parser_where)
 (modules test_parser_where)
 (libraries datascript))

(test
 (name test_pull_api)
 (modules test_pull_api)
 (libraries datascript))

(test
 (name test_pull_parser)
 (modules test_pull_parser)
 (libraries datascript))

(test
 (name test_query_pull)
 (modules test_query_pull)
 (libraries datascript))

(test
 (name test_query_namespace)
 (modules test_query_namespace)
 (libraries datascript))

(test
 (name test_tuples)
 (modules test_tuples)
 (libraries datascript))

(test
 (name test_serialize)
 (modules test_serialize)
 (libraries datascript))

(test
 (name test_sqlite_storage)
 (modules test_sqlite_storage)
 (libraries datascript logseq_sqlite_storage unix))

(test
 (name test_storage)
 (modules test_storage)
 (libraries datascript unix))

(test
 (name test_upsert)
 (modules test_upsert)
 (libraries datascript))

(test
 (name test_util)
 (modules test_util)
 (libraries datascript))

(executable
 (name js_smoke)
 (modes js)
 (modules js_smoke)
 (libraries datascript))

(rule
 (alias runtest)
 (deps js_smoke.bc.js)
 (action
  (run node %{dep:js_smoke.bc.js})))
