(test
 (name test_datascript)
 (modules test_datascript)
 (libraries datascript unix))

(test
 (name test_lru)
 (modules test_lru)
 (libraries datascript))

(test
 (name test_conn)
 (modules test_conn)
 (libraries datascript))

(test
 (name test_core)
 (modules test_core)
 (libraries datascript))

(test
 (name test_db)
 (modules test_db)
 (libraries datascript persistent_sorted_set_ocaml unix))

(test
 (name test_perf)
 (modules test_perf)
 (libraries datascript unix))

(test
 (name test_data_readers)
 (modules test_data_readers)
 (libraries datascript))

(test
 (name test_built_ins)
 (modules test_built_ins)
 (libraries datascript))

(test
 (name test_issues)
 (modules test_issues)
 (libraries datascript))

(test
 (name test_entity)
 (modules test_entity)
 (libraries datascript))

(test
 (name test_listen)
 (modules test_listen)
 (libraries datascript))

(test
 (name test_lookup_refs)
 (modules test_lookup_refs)
 (libraries datascript))

(test
 (name test_parser)
 (modules test_parser)
 (libraries datascript))

(test
 (name test_parser_find)
 (modules test_parser_find)
 (libraries datascript))

(test
 (name test_parser_query)
 (modules test_parser_query)
 (libraries datascript))

(test
 (name test_parser_return_map)
 (modules test_parser_return_map)
 (libraries datascript))

(test
 (name test_parser_rules)
 (modules test_parser_rules)
 (libraries datascript))

(test
 (name test_parser_where)
 (modules test_parser_where)
 (libraries datascript))

(test
 (name test_pull_api)
 (modules test_pull_api)
 (libraries datascript))

(test
 (name test_pull_parser)
 (modules test_pull_parser)
 (libraries datascript))

(test
 (name test_query_pull)
 (modules test_query_pull)
 (libraries datascript))

(test
 (name test_query_namespace)
 (modules test_query_namespace)
 (libraries datascript))

(test
 (name test_tuples)
 (modules test_tuples)
 (libraries datascript))

(test
 (name test_serialize)
 (modules test_serialize)
 (libraries datascript))

(test
 (name test_sqlite_storage)
 (modules test_sqlite_storage)
 (libraries datascript logseq_sqlite_storage unix sqlite3 melange-transit-native))

(test
 (name test_sqlite_package)
 (modules test_sqlite_package)
 (libraries datascript datascript_ocaml.sqlite))

(test
 (name test_melange_transit_backend)
 (modules test_melange_transit_backend)
 (libraries melange-transit-native melange-edn-native))

(executable
 (name sqlite_cross_runtime_native)
 (modules sqlite_cross_runtime_native)
 (libraries datascript unix sqlite3 yojson))

(rule
 (target upstream_datascript_bundle.stamp)
 (deps ../script/ensure_upstream_datascript.sh)
 (action
  (progn
   (run bash %{dep:../script/ensure_upstream_datascript.sh})
   (with-stdout-to
    %{target}
    (echo generated)))))

(rule
 (alias runtest)
 (deps
  sqlite_cross_runtime_native.exe
  sqlite_cross_runtime_parity.js
  upstream_datascript_bundle.stamp
  ../js/datascript_js.bc.js)
 (action
  (run
   node
   --experimental-sqlite
   %{dep:sqlite_cross_runtime_parity.js}
   %{dep:sqlite_cross_runtime_native.exe}
   %{dep:../js/datascript_js.bc.js})))

(test
 (name test_logseq_query_parity)
 (modules test_logseq_query_parity)
 (libraries datascript logseq_sqlite_storage unix sqlite3))

(test
 (name test_logseq_query_planners)
 (modules test_logseq_query_planners)
 (libraries datascript unix))

(test
 (name test_storage)
 (modules test_storage)
 (libraries datascript unix))

(test
 (name test_upsert)
 (modules test_upsert)
 (libraries datascript))

(test
 (name test_util)
 (modules test_util)
 (libraries datascript))

(executable
 (name cross_runtime_ocaml)
 (modules cross_runtime_ocaml)
 (libraries datascript))

(executable
 (name js_smoke)
 (modes js)
 (modules js_smoke)
 (libraries datascript))

(rule
 (alias runtest)
 (deps js_smoke.bc.js)
 (action
  (run node %{dep:js_smoke.bc.js})))

(rule
 (alias runtest)
 (deps ../js/datascript_js.bc.js js_facade_runner.js)
 (action
  (run node %{dep:js_facade_runner.js} %{dep:../js/datascript_js.bc.js})))

(rule
 (alias runtest)
 (deps
  cross_runtime_parity_test.sh
  cross_runtime_ocaml.exe
  upstream_datascript_bundle.stamp
  ../script/cross_runtime_parity.sh
  ../script/cross_runtime_upstream.js
  ../script/cross_runtime/upstream_fuzz.cljs)
 (action
  (run
   bash
   %{dep:cross_runtime_parity_test.sh}
   %{dep:cross_runtime_ocaml.exe}
   %{dep:../script/cross_runtime_upstream.js})))
